chore(sonar): fix code smells and improve code quality
- Refactor methods to reduce complexity
- Remove unused imports and variables
- Add missing null checks
- Optimize loops and conditions